# btopt

./:  .gitignore  README.md  pyproject.toml
btopt/: __init__.py  dataloader.py  engine.py  indicator.py  log_config.py  mods.txt  order.py  orders_classes.py  outputs.py  parameters.py  plots.py  portfolio.py  portfolio_managers.py  reporter.py  sizer.py  strategy.py  trade.py  types.py
btopt/analysis/: monte_carlo.py  sensitivity.py  stress_test.py
btopt/data/: accessor.py  bar.py  custom_data.py  data.py  dataloader.py  dataview.py  manager.py  manager_output.py  manager_output_multi.py  manager_output_single.py  manager_price.py  price_data.py  timeframe.py
btopt/indicator/: __init__.py  indicator.py  indicator_helper.py  moving_averages.py
btopt/indicators/: ATR.py  BBANDS.py  EMA.py  LINREG.py  MACD.py  RSI.py  SMA.py  VWAP.py  WMA.py  __init__.py
btopt/strategy/: helper.py  strategy.py
btopt/util/: __init__.py  api_binance.py  data.py  decimal.py  ext_decimal.py  functions.py  log_config.py  logger.py  logging.py  (+2 more)
deprecated/: .txt  dataview.py  debugging.py  engine.py  engine_opt.py  helper.py  manager.py  old_portfolio.py  order_old.py  portfolio (delayed trade creation).py  portfolio (latest).py  portfolio copy.py  portfolio.py  portfolio_managers (latest).py  portfolio_managers.py  portfolio_mod.py  portfolio_old.py  portfolio_opt.py  reporter.py  strategy copy.py  strategy.py  strategy_new.py  strategy_old.py  trade.py
tests/: main.ipynb  performance_report.html  plot_indicators.ipynb  profile_backtester.prof  strategies.py  test.ipynb  test.py
